2008-06-14  Roderic Morris  <roderic@ccs.neu.edu>

	* src/gui/viewport.cpp, data/graphics/images/CMakeLists.txt,
	data/graphics/CMakeLists.txt: Fix compiler and cmake warnings.

2008-06-11  David Athay  <ko2fan@gmail.com>

	* src/gui/guildlistbox.cpp: Fixed displaying guild members in guild 
	window.

2008-06-10  Roderic Morris  <roderic@ccs.neu.edu>

	* src/net/protocol.h src/net/chatserver/chatserver.h,
	src/net/chatserver/chatserver.cpp: Update chat packet
	definitions, get rid of old unused functions.

2008-06-09  Roderic Morris  <roderic@ccs.neu.edu>

	* src/commandhandler.cpp, src/commandhandler.h,
	src/game.cpp, src/CMakeLists.txt, src/Makefile.am:
	Add a command handler class to handle commands issued by
	the user.
	* src/gui/chat.cpp, src/gui/chat.h, src/net/chathandler.cpp,
	src/net/guildhandler.cpp: Display messages about chats in
	green, and take command parsing code out of the chat dialog,
	* src/channel.cpp, src/channel.h: Don't store channel users,
	its handled with packets.

2008-06-03  Roderic Morris  <roderic@ccs.neu.edu>

	* src/gui/chat.cpp, src/gui/chat.h, src/net/guildhandler.cpp: 
	Get rid of more eAthena related code, get rid of the redundant
	addChannel method.
	* src/net/chathandler.cpp, src/net/chathandler.h, src/net/protocol.h,:
	break up the logic in chathandler with helper methods, add enums
	for up to now unhandled messages, handle announcements and leave /
	enter messages for channels.
	* src/channel.h, src/channel.cpp: handle user lists and announcements.

2008-05-30  Roderic Morris  <roderic@ccs.neu.edu>

	* src/gui/chat.cpp, src/net/chathandler.cpp: Fixed handling of
	announce messages and private messages. Don't cut off the last
	character from pm recipient's name. Got rid of old eAthena code.

2008-05-22  Roderic Morris  <roderic@ccs.neu.edu>

	* src/gui/widgets/tab.cpp, src/utils/sha256.cpp: Fix compile errors
	when compiling with GCC 4.3.

2008-05-20  Bjørn Lindeijer  <bjorn@lindeijer.nl>
