@@ -43,7 +43,7 @@ namespace Net
         void privMsg(const std::string &recipient, const std::string &text);
 
         void registerChannel(const std::string &name,
-                const std::string &announcement, const std::string &password);
+                const std::string &topic, const std::string &password);
 
         void enterChannel(const std::string &channel, const std::string &password);
 
@@ -52,6 +52,8 @@ namespace Net
         void getChannelList();
 
         void getUserList(const std::string &channel);
+
+        void setChannelTopic(short channel, const std::string &topic);
 
     }
 }
